fix: CollapseBox overflow

--- a/webapp/javascript/ui/Box.module.scss
+++ b/webapp/javascript/ui/Box.module.scss
@@ -20,7 +20,6 @@
     border: none;
     border-radius: 0;
     padding-bottom: 0;
-    overflow: hidden;
     height: auto;
 
     &.collapsedContent {
